# gitlab-security

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose-dev.yaml  members_extractor.py  pyproject.toml  pytest.ini
app/: cli.py  config.py  dependency_manager.py
domain/: file_writer.py  members_comparison.py  members_extractor.py
settings/: settings.toml
tests/: e2e_test.py
usecase/: extract_project_members.py  project_members_comparison.py
